Updated breakpoint for desktops, fixed margins on smaller screens

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -4,6 +4,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto 1fr;
     gap: 0 20px;
+
+    @include marginLeft($m-hor, $m-hor, 0);
+    @include marginRight($m-hor, $m-hor, 0);
   }
 
   @include onDesktop {
