--- a/src/styles/blocks/presentation.scss
+++ b/src/styles/blocks/presentation.scss
@@ -1,8 +1,10 @@
 .presentation {
+  @include marginLeft($m-hor, 0, 0);
+  @include marginRight($m-hor, 0, 0);
 
   &__photo {
-    @include marginLeft (0, $m-hor, 0);
-    @include marginRight (0, $m-hor, 0);
+    @include marginLeft(0, $m-hor, 0);
+    @include marginRight(0, $m-hor, 0);
 
     transition: transform 0.3s;
 
