--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,5 +1,5 @@
 $breakpoint-tablet: 768px;
-$breakpoint-desktop: 1024px;
+$breakpoint-desktop: 1250px;
 
 $icon-size: 24px;
 $icon-size-benefit: 50px;
